kubernetes/apps/hydra/link-shortener/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: link-shortener
spec:
  selector:
    matchLabels:
      app: link-shortener
  replicas: 1
  template:
    metadata:
      labels:
        app: link-shortener
      annotations:
        kubernetes.io/egress-bandwidth: "5M"
        kubernetes.io/ingress-bandwidth: "1M"
    spec:
      containers:
      - name: link-shortener
        image: caddy:2.11.7 # {"$imagepolicy": "link-shortener:link-shortener"}
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 8080
          initialDelaySeconds: 5
        volumeMounts:
        - name: caddyfile
          subPath: Caddyfile
          mountPath: /etc/caddy/Caddyfile
      volumes:
      - name: caddyfile
        configMap:
          name: caddyfile
