kubernetes/apps/hydra/link-shortener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: link-shortener
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: link-shortener
