kubernetes/apps/hydra/link-shortener/httpRoute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: link-shortener-https
spec:
  parentRefs:
  - name: https-gateway-thetillhoff-de
    namespace: gateways
  hostnames:
  - link.dev.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: link-shortener
      port: 80
